# rules_pyvenv

./: .gitignore  BUILD.bazel  README.md  WORKSPACE  build_env.py  repositories.bzl  venv.bzl  venv.bzl.tmpl
example/: BUILD.bazel  WORKSPACE  requirements.in  requirements.txt
example/libraries/liba/: BUILD.bazel  liba.py
example/libraries/libb/: BUILD.bazel
